--- a/test_vae.ipynb
+++ b/test_vae.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "if \"google.colab\" in sys.modules:\n",
     "  ! git clone https://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@github.com/ATML-2022-Group6/inference-suboptimality\n",
-    "  ! mv -r inference-suboptimality/* . && rm inference-suboptimality\n",
+    "  ! cp -r inference-suboptimality/* . && rm inference-suboptimality\n",
     "  ! tar -xvf datasets/mnist.pkl.tar.gz && mv mnist.pkl datasets/"
    ]
   },
