Potential local FFG changes

--- a/test_vae.ipynb
+++ b/test_vae.ipynb
@@ -142,7 +142,7 @@
       "outputs": [],
       "source": [
         "hps = HyperParams(has_flow=True)\n",
-        "init_vae, run_vae, sample_vae = build_vae(hps)"
+        "init_vae, run_vae, run_vae_local, sample_vae = build_vae(hps)"
       ]
     },
     {
