--- a/test_vae.ipynb
+++ b/test_vae.ipynb
@@ -59,7 +59,9 @@
         "from tqdm.notebook import tqdm, trange\n",
         "\n",
         "import time\n",
-        "import pathlib"
+        "import pathlib\n",
+        "\n",
+        "import utils"
       ]
     },
     {
@@ -318,7 +320,7 @@
         "def save_params(epoch, params):\n",
         "  if not save_enabled: return\n",
         "  file_name = \"{}/{}_{:05d}.pkl\".format(save_dir, file_tag, epoch)\n",
-        "  vae.save_params(file_name, params)\n",
+        "  utils.save_params(file_name, params)\n",
         "\n",
         "opt_state = opt_init(init_params)\n",
         "\n",
