Lot of refactoring

--- a/run_local_opt.ipynb
+++ b/run_local_opt.ipynb
@@ -91,7 +91,7 @@
         "batch_size = 1\n",
         "# only locally optimise 1000 due to computational cost\n",
         "smaller_data = True\n",
-        "num_train_batches, train_batches = get_batches(mnist[\"train_x\"], batch_size, smaller_data)"
+        "train_batches = get_batches(mnist[\"train_x\"], batch_size, smaller_data)"
       ]
     },
     {
