--- a/run_train_vae.ipynb
+++ b/run_train_vae.ipynb
@@ -31,11 +31,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 15,
       "metadata": {
         "id": "WL-K20AcKMZO"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2\n",
