Change ELBO calculation to save memory

--- a/run_train_vae.ipynb
+++ b/run_train_vae.ipynb
@@ -58,7 +58,7 @@
         "from matplotlib import pyplot as plt\n",
         "\n",
         "from datasets import get_batches, get_mnist, get_fashion_mnist\n",
-        "from train_vae import TrainHyperParams, train_vae\n",
+        "from train_vae import TrainHyperParams, train_vae, dataset_elbo\n",
         "from utils import HyperParams\n",
         "from vae import VAE"
       ]
@@ -282,6 +282,23 @@
       "source": [
         "model = VAE(hps)\n",
         "params, train_elbos, test_elbos = train_vae(train_hps, model, train_batches, test_batches)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# final ELBOs\n",
+        "eval_elbos = hps.eval_elbos\n",
+        "eval_rng = random.PRNGKey(0)\n",
+        "\n",
+        "train_elbo, train_stddev = dataset_elbo(model, eval_elbos, train_batches, eval_rng, params)\n",
+        "print(\"Final Train ELBO:\", train_elbo, \"+-\", 2 * train_stddev)\n",
+        "\n",
+        "test_elbo, test_stddev = dataset_elbo(model, eval_elbos, test_batches, eval_rng, params)\n",
+        "print(\"Final Test ELBO:\", test_elbo, \"+-\", 2 * test_stddev)"
       ]
     },
     {
