--- a/run_train_vae.ipynb
+++ b/run_train_vae.ipynb
@@ -58,7 +58,7 @@
         "from matplotlib import pyplot as plt\n",
         "\n",
         "from datasets import get_batches, get_mnist, get_fashion_mnist\n",
-        "from train_vae import TrainHyperParams, train_vae, dataset_elbo\n",
+        "from train_vae import TrainHyperParams, train_vae, elbo_estimate\n",
         "from utils import HyperParams\n",
         "from vae import VAE"
       ]
@@ -294,10 +294,10 @@
         "eval_elbos = hps.eval_elbos\n",
         "eval_rng = random.PRNGKey(0)\n",
         "\n",
-        "train_elbo, train_stddev = dataset_elbo(model, eval_elbos, train_batches, eval_rng, params)\n",
+        "train_elbo, train_stddev = elbo_estimate(model, eval_elbos, train_batches, eval_rng, params)\n",
         "print(\"Final Train ELBO:\", train_elbo, \"+-\", 2 * train_stddev)\n",
         "\n",
-        "test_elbo, test_stddev = dataset_elbo(model, eval_elbos, test_batches, eval_rng, params)\n",
+        "test_elbo, test_stddev = elbo_estimate(model, eval_elbos, test_batches, eval_rng, params)\n",
         "print(\"Final Test ELBO:\", test_elbo, \"+-\", 2 * test_stddev)"
       ]
     },
