--- a/run_train_vae.ipynb
+++ b/run_train_vae.ipynb
@@ -291,7 +291,7 @@
       "outputs": [],
       "source": [
         "# final ELBOs\n",
-        "eval_elbos = hps.eval_elbos\n",
+        "eval_elbos = train_hps.eval_elbos\n",
         "eval_rng = random.PRNGKey(0)\n",
         "\n",
         "train_elbo, train_stddev = elbo_estimate(model, eval_elbos, train_batches, eval_rng, params)\n",
