--- a/run_local_opt.ipynb
+++ b/run_local_opt.ipynb
@@ -32,28 +32,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 7,
       "metadata": {
         "id": "4SoorkkYMK0i"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The autoreload extension is already loaded. To reload it, use:\n",
-            "  %reload_ext autoreload\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%load_ext autoreload\n",
         "%autoreload 2\n",
         "\n",
+        "import pathlib\n",
+        "\n",
         "import utils\n",
         "import vae\n",
-        "from datasets import get_mnist, get_batches\n",
-        "from local_opt import LocalHyperParams, local_opt"
+        "from datasets import get_mnist, get_batches, get_fashion_mnist\n",
+        "from local_opt import LocalHyperParams, local_opt\n",
+        "from utils import HyperParams"
       ]
     },
     {
@@ -70,13 +64,87 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "mnist_ffg_anneal_smaller_local-ffg\n"
+          ]
+        }
+      ],
+      "source": [
+        "# -- Vary across experiments\n",
+        "is_larger = False\n",
+        "trained_has_flow = False\n",
+        "local_has_flow = False\n",
+        "kl_annealing = True\n",
+        "use_fashion = False\n",
+        "# --- \n",
+        "\n",
+        "## Name of this experiment (important to change for saving results)\n",
+        "name = \"_\".join([\n",
+        "  [\"mnist\",\"fashion\"][use_fashion],\n",
+        "  [\"ffg\",\"flow\"][trained_has_flow],\n",
+        "  [\"regular\",\"anneal\"][kl_annealing],\n",
+        "  [\"smaller\",\"larger\"][is_larger],\n",
+        "  [\"local-ffg\", \"local-flow\"][local_has_flow],\n",
+        "])\n",
+        "print(name)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "mount_google_drive = False\n",
+        "\n",
+        "if mount_google_drive and \"google.colab\" in sys.modules:\n",
+        "  from google.colab import drive\n",
+        "  drive.mount(\"/content/drive\")\n",
+        "  save_dir = \"/content/drive/My Drive/ATML/\" + name\n",
+        "else:\n",
+        "  save_dir = \"./experiments/\" + name\n",
+        "\n",
+        "pathlib.Path(save_dir).mkdir(parents=True, exist_ok=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "HyperParams(image_size=784, latent_size=50, encoder_hidden=(200, 200), decoder_hidden=(200, 200), has_flow=False, num_flows=2, flow_hidden_size=200)\n",
+            "LocalHyperParams(learning_rate=0.001, mc_samples=100, display_epoch=100, debug=True, iwae_samples=100, max_epochs=100000, patience=10, es_epsilon=0.05)\n"
+          ]
+        }
+      ],
+      "source": [
+        "hidden_size = (500, 500, 500) if is_larger else (200, 200)\n",
+        "hps = HyperParams(has_flow=local_has_flow, encoder_hidden=hidden_size, decoder_hidden=hidden_size)\n",
+        "local_hps = LocalHyperParams()\n",
+        "\n",
+        "print(hps)\n",
+        "print(local_hps)"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 16,
       "metadata": {
         "id": "iDQRltQLOw5a"
       },
       "outputs": [],
       "source": [
-        "mnist = get_mnist()"
+        "mnist = get_fashion_mnist() if use_fashion else get_mnist()"
       ]
     },
     {
@@ -87,7 +155,7 @@
       },
       "outputs": [],
       "source": [
-        "batch_size = 1\n",
+        "batch_size = 100\n",
         "# only locally optimise 1000 due to computational cost\n",
         "smaller_data = True\n",
         "train_batches = get_batches(mnist[\"train_x\"], batch_size, smaller_data)"
@@ -101,20 +169,10 @@
       },
       "outputs": [],
       "source": [
-        "# Replace the following with the name of the .pkl file \n",
-        "file_name = \"models/flow_xinfo_91.7_full.pkl\"\n",
-        "params = utils.load_params(file_name)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 19,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# use has_flow = True/False to decide between local flow / FFG\n",
-        "hps = utils.HyperParams(has_flow = True)\n",
-        "model = vae.VAE(hps)"
+        "# remove \"local-ffg\" or \"local-flow\" suffix \n",
+        "trained_model_dir = save_dir[:save_dir.rfind(\"_\")]\n",
+        "file_name = trained_model_dir + \"/params.pkl\"\n",
+        "trained_params = utils.load_params(file_name)"
       ]
     },
     {
@@ -235,8 +293,19 @@
         }
       ],
       "source": [
-        "local_hps = LocalHyperParams()\n",
-        "local_opt(local_hps, model, train_batches, params)"
+        "model = vae.VAE(hps)\n",
+        "elbos, iwaes, local_params = local_opt(local_hps, model, train_batches, trained_params)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "utils.save_params(elbos, save_dir + \"/elbos.pkl\")\n",
+        "utils.save_params(iwaes, save_dir + \"/iwaes.pkl\")\n",
+        "utils.save_params(local_params, save_dir + \"/local_params.pkl\")"
       ]
     }
   ],
