Notebooks for experiments

--- a/run_local_opt.ipynb
+++ b/run_local_opt.ipynb
@@ -1,24 +1,10 @@
 {
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ATML-2022-Group6/inference-suboptimality/blob/main/run_local_opt.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tcQPYgppMJxM",
-        "outputId": "2f5c2333-6538-42b0-b8b8-56864bdfec77"
+        "id": "tcQPYgppMJxM"
       },
       "outputs": [],
       "source": [
@@ -32,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "4SoorkkYMK0i"
       },
@@ -52,8 +38,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "DV5tMMJrLkhN"
+      },
       "outputs": [],
       "source": [
         "use_tpu = True\n",
@@ -64,8 +52,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "GEUpwPnrLkhO",
+        "outputId": "290164b1-3d58-40a5-91a9-9d38a6ccedb7"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -97,8 +88,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "0PEw8a37LkhP"
+      },
       "outputs": [],
       "source": [
         "mount_google_drive = False\n",
@@ -115,8 +108,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "yihDqEgcLkhQ",
+        "outputId": "fc8431f4-bd0f-4f78-fd59-97123d4bc47e"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -138,7 +134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "iDQRltQLOw5a"
       },
@@ -149,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "SU-wN7oTMPrl"
       },
@@ -163,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "fv3Mh87sM6Jc"
       },
@@ -177,7 +173,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -193,7 +189,11 @@
             "697c711e844e43a6bcfb3e128bfb1b1b",
             "52dd28a8d871453fa2afbcc0796a28e1",
             "ccd090738521482187d53c930da614b3",
-            "39808407dffc461b9d91e4fcf3ff0514"
+            "39808407dffc461b9d91e4fcf3ff0514",
+            "6c6f7fd3b1a148b295c6295d722e81ff",
+            "23560af093ce4cbba1e2821a3016949b",
+            "006f4b8a8bf0482eb98affa9f7ce61c6",
+            "79e1ddcdfc654bed8d4b0198b3ac0b71"
           ]
         },
         "id": "riE0j8KgOGHH",
@@ -300,12 +300,14 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "b8Qf27kRLkhV"
+      },
       "outputs": [],
       "source": [
-        "utils.save_params(elbos, save_dir + \"/elbos.pkl\")\n",
-        "utils.save_params(iwaes, save_dir + \"/iwaes.pkl\")\n",
-        "utils.save_params(local_params, save_dir + \"/local_params.pkl\")"
+        "utils.save_params(save_dir + \"/elbos.pkl\", elbos)\n",
+        "utils.save_params(save_dir + \"/iwaes.pkl\", iwaes)\n",
+        "utils.save_params(save_dir + \"/local_params.pkl\", local_params)"
       ]
     }
   ],
@@ -313,7 +315,6 @@
     "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [],
-      "include_colab_link": true,
       "name": "run_local_ffg.ipynb",
       "provenance": []
     },
