--- a/run_local_opt.ipynb
+++ b/run_local_opt.ipynb
@@ -67,7 +67,7 @@
         }
       ],
       "source": [
-        "# -- Vary across experiments\n",
+        "# -- Vary across experiment\n",
         "is_larger = False\n",
         "trained_has_flow = False\n",
         "local_has_flow = False\n",
