Fix Large Encoder

--- a/run_ais.ipynb
+++ b/run_ais.ipynb
@@ -118,8 +118,8 @@
         }
       ],
       "source": [
-        "hidden_size = (500, 500, 500) if is_larger else (200, 200)\n",
-        "hps = HyperParams(has_flow=has_flow, encoder_hidden=hidden_size, decoder_hidden=hidden_size)\n",
+        "encoder_size = (500, 500) if is_larger else (200, 200)\n",
+        "hps = HyperParams(has_flow=has_flow, encoder_hidden=encoder_size)\n",
         "ais_hps = AISHyperParams()\n",
         "\n",
         "print(hps)\n",
