--- a/run_local_opt.ipynb
+++ b/run_local_opt.ipynb
@@ -131,8 +131,8 @@
         }
       ],
       "source": [
-        "hidden_size = (500, 500, 500) if is_larger else (200, 200)\n",
-        "hps = HyperParams(has_flow=local_has_flow, encoder_hidden=hidden_size, decoder_hidden=hidden_size)\n",
+        "encoder_size = (500, 500) if is_larger else (200, 200)\n",
+        "hps = HyperParams(has_flow=local_has_flow, encoder_hidden=encoder_size)\n",
         "local_hps = LocalHyperParams()\n",
         "\n",
         "print(hps)\n",
