--- a/run_train_vae.ipynb
+++ b/run_train_vae.ipynb
@@ -129,8 +129,8 @@
         }
       ],
       "source": [
-        "hidden_size = (500, 500, 500) if is_larger else (200, 200)\n",
-        "hps = HyperParams(has_flow=has_flow, encoder_hidden=hidden_size, decoder_hidden=hidden_size)\n",
+        "encoder_size = (500, 500) if is_larger else (200, 200)\n",
+        "hps = HyperParams(has_flow=has_flow, encoder_hidden=encoder_size)\n",
         "train_hps = TrainHyperParams(kl_annealing=kl_annealing, save_dir=save_dir)\n",
         "\n",
         "print(hps)\n",
