--- a/run_local_opt.ipynb
+++ b/run_local_opt.ipynb
@@ -38,7 +38,7 @@
         "\n",
         "import utils\n",
         "import vae\n",
-        "from datasets import get_mnist, get_batches, get_fashion_mnist\n",
+        "from datasets import get_batches, get_dataset\n",
         "from local_opt import LocalHyperParams, local_opt\n",
         "from utils import HyperParams"
       ]
@@ -80,14 +80,14 @@
         "trained_has_flow = False\n",
         "local_has_flow = False\n",
         "kl_annealing = True\n",
-        "use_fashion = False\n",
+        "dataset_name = \"mnist\" # mnist, fashion, kmnist\n",
         "# --- \n",
         "\n",
         "def fmt_size(sizes): return \"\".join(str(size)[0] for size in list(sizes))\n",
         "\n",
         "## Name of this experiment (important to change for saving results)\n",
         "name = \"_\".join([\n",
-        "  [\"mnist\",\"fashion\"][use_fashion],\n",
+        "  dataset_name,\n",
         "  [\"ffg\",\"flow\"][trained_has_flow],\n",
         "  [\"regular\",\"anneal\"][kl_annealing],\n",
         "  \"e\"+fmt_size(encoder_size)+\"d\"+fmt_size(decoder_size),\n",
@@ -149,7 +149,7 @@
       },
       "outputs": [],
       "source": [
-        "mnist = get_fashion_mnist() if use_fashion else get_mnist()"
+        "mnist = get_dataset(dataset_name)"
       ]
     },
     {
