--- a/run_train_vae.ipynb
+++ b/run_train_vae.ipynb
@@ -57,7 +57,7 @@
         "from jax import random\n",
         "from matplotlib import pyplot as plt\n",
         "\n",
-        "from datasets import get_batches, get_mnist, get_fashion_mnist\n",
+        "from datasets import get_batches, get_dataset\n",
         "from train_vae import TrainHyperParams, train_vae, elbo_estimate\n",
         "from utils import HyperParams\n",
         "from vae import VAE"
@@ -82,14 +82,14 @@
         "decoder_size = (200, 200)\n",
         "has_flow = False\n",
         "kl_annealing = True\n",
-        "use_fashion = False\n",
+        "dataset_name = \"mnist\" # mnist, fashion, kmnist\n",
         "# --- \n",
         "\n",
         "def fmt_size(sizes): return \"\".join(str(size)[0] for size in list(sizes))\n",
         "\n",
         "## Name of this experiment (important to change for saving results)\n",
         "name = \"_\".join([\n",
-        "  [\"mnist\",\"fashion\"][use_fashion],\n",
+        "  dataset_name,\n",
         "  [\"ffg\",\"flow\"][has_flow],\n",
         "  [\"regular\",\"anneal\"][kl_annealing],\n",
         "  \"e\"+fmt_size(encoder_size)+\"d\"+fmt_size(decoder_size),\n",
@@ -173,7 +173,7 @@
       },
       "outputs": [],
       "source": [
-        "mnist = get_fashion_mnist() if use_fashion else get_mnist()"
+        "mnist = get_dataset(dataset_name)"
       ]
     },
     {
